--- a/extras/play/style.css
+++ b/extras/play/style.css
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
-
-html, body {
+html, body{
+  margin : 0px;
+  width : 100%;
+  height : 100%;
   overflow: hidden;
-  background-color: rgb(0, 0, 0);
-  -moz-user-select: -moz-none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  background-color: #7ac5cc;
 }
 
-
-
+#gameCanvas{
+  position: absolute;
+}
